--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
-<h1>Naim Mert ENIKONU</h1>
-<h2>Hakkimda</h2>
-<p>Merhaba Ben Naim Mert ENIKONU Manisa celal bayar universitesi Elektrik elektronik muhendisligi ogrencisiyim Spor yapmayi cok severim 
-    ozellikle futbol ve volleybol oynamak hobilerim arasinda en sevdiklerimdir 
-    bos zamanlarimda yeni bir seyler arastirip ogrenmeyi severim.Bu aralar html ogrenmeye basladim umarim istedigim seviyeye gelebilirim
-
-</p>
-<h3>Sevdigim Diziler</h3>
-<h4>Game of Thrones</h4>
-<p>Game of thrones Eski donemlerde 7 kralligin hikayesini ve bu hikayede kralliklarin 7 kralligin hukumdari olmak icin yaptilarini anlatiyor 
-    Final sezonu kotu bitsede dizi tarihinin gelmis gecmis en cok sevilen dizisidir
-     </p>
-<!---->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1 class="text bold">Naim Mert ENIKONU</h1>
+    <h2 class="text bold">Hakkimda</h2>
+    <p>Merhaba Ben Naim Mert ENİKONU dizi izlemeyi cok severim Tam bir Game of Thrones hayraniyim sizede mutlaka izlemenizi tavsiye ederim
+        bircok hobiye sahibim fakat hobilerim arasinda son zamanlarda en cok keyif aldiğim frontend kisminde kodlar yazmak
+        patika.dev sayesinde hem eğleniyorum hemde kod yaziyorum gelin sizde aramiza katilin :)
+    </p>
+    <h3>İlgi Alanlarim</h3>
+    <p>1.film</p>
+    <ol>
+        <li>Hobbit</li>
+        <li>Lord of rings</li>
+        <li>sherlock holmes</li>
+    </ol>
+    <p>2.Dizi</p>
+    <ol>
+        <li>Game of Thorones</li>
+        <li>Vikings</li>
+        <li>Arrow</li>
+    </ol>
+    <p>3.Kitap</p>
+   <ol>
+        <li>1984</li>
+        <li>Simyaci</li>
+        <li> Nutuk</li>
+   </ol> 
+   <img src="pictures/got.jfif" alt="Game of Thrones">
+</body>
+</html>
